client/css: fix wrapping tags in read-only sidebar

--- a/client/css/posts.styl
+++ b/client/css/posts.styl
@@ -272,14 +272,6 @@ $safety-unsafe = #F3985F
         h1
             margin-bottom: 0.5em
 
-        i
-            padding-right: 0.4em
-
-        .tag-usages
-            font-size: 90%
-            color: $inactive-link-color
-            margin-left: 0.7em
-
 .post-view .edit-sidebar
     .expander-content
         section:not(:last-child)
